# bytie.rs

./: Cargo.toml  LICENSE  README.md
src/: brainfuck.rs  bytie.rs  collatz.rs  dice.rs  fft.rs  imagine.rs  latex.rs  lisp.rs  main.rs  pgsays.rs  ping.rs  stock.rs  trend.rs  usdtry.rs  xkcd.rs
