[package]
name = "bytie"
version = "0.1.0"
edition = "2021"

[dependencies]
fal-rust = "0.1.1"
num-complex = "0.4.6"
poise = "0.6.1"
rand = "0.8.5"
regex = "1.10.6"
reqwest = "0.12.7"
scraper = "0.20.0"
serde = "1.0.209"
serde_json = "1.0.127"
tokio = {version = "1.39.3", features = ["full"]}
tulisp = "0.17.0"
